send raw conference IQ